changed the button type to submit and password type to password for encryption. for dashboard.html, i add code to display the user name

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,6 @@
 <html>
     <head>
         <title>Dashboard Main Page</title>
-        <h1> Welcome to the dashboard main page!</h1>
+        <h1> Welcome to the dashboard main page, {{ username }}!</h1>
     </head>
 </html>
