--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,7 +8,7 @@
     <div class = "container">
         <div class = "main" >
             <form id="login-form" method = "post" name="login-form" action="/login">
-                <label> Users:</label>
+                <label> Username:</label>
                 <input type="text" name="user-name" id="user-name" required />
                 
                 <label> Password:</label>
