added the none option in the salary category

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -10,6 +10,7 @@
 
             <label for="income-categories"> Income category: </label>
             <select name="income-categories" id="income-categories">
+                <option vale="none">None</option>
                 <option value="salary">Salary</option>
                 <option value="zelle">Zelle</option>
             </select>
